// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearAfter renders 0 1`] = `
Array [
  .c0 {
  clear-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders function 1`] = `
Array [
  .c0 {
  clear-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: has;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: has;
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders invalid theme path 1`] = `
Array [
  .c0 {
  clear-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders negative number 1`] = `
Array [
  .c0 {
  clear-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    clear-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    clear-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    clear-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear-after: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    clear-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear-after: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    clear-after: July;
  }
}

@media April {
  .c0 {
    clear-after: August;
  }
}

@media January {
  .c0 {
    clear-after: September;
  }
}

@media April {
  .c0 {
    clear-after: November;
  }
}

@media June {
  .c0 {
    clear-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    clear-after: July;
  }
}

@media April {
  .c0 {
    clear-after: August;
  }
}

@media January {
  .c0 {
    clear-after: September;
  }
}

@media April {
  .c0 {
    clear-after: November;
  }
}

@media June {
  .c0 {
    clear-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    clear-after: January;
  }
}

@media April {
  .c0 {
    clear-after: December;
  }
}

@media January {
  .c0 {
    clear-after: April;
  }
}

@media April {
  .c0 {
    clear-after: May;
  }
}

@media June {
  .c0 {
    clear-after: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    clear-after: January;
  }
}

@media April {
  .c0 {
    clear-after: December;
  }
}

@media January {
  .c0 {
    clear-after: April;
  }
}

@media April {
  .c0 {
    clear-after: May;
  }
}

@media June {
  .c0 {
    clear-after: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders postitive number 1`] = `
Array [
  .c0 {
  clear-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders string 1`] = `
Array [
  .c0 {
  clear-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: June;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: June;
}

<div
    className="c0"
  />,
]
`;

exports[`clearAfter renders valid theme path 1`] = `
Array [
  .c0 {
  clear-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  clear-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
